# cyberkrill

./: .gitignore  .mcp.json  .mcp.production.json  BDK_IMPLEMENTATION.md  CLAUDE.md  COLDCARD_SETUP.md  CONVENTIONS.md  Cargo.toml  LICENSE-MIT  MCP_SETUP.md  NIXOS_COLDCARD_SETUP.md  README.md  TREZOR_SUPPORT.md  coldcard-nixos-config.nix  cyberkrill.sh  deny.toml  flake.nix  result  test-bdk-complete.sh  test-hidapi.rs  test-multipath.sh  test-simple.sh  test.psbt  test.sh  trezor_address.json
.cargo/: audit.toml  config.toml
.githooks/: pre-push
.github/workflows/: dependencies.yml  release-binaries.yml  rust.yml  security.yml
cyberkrill/: Cargo.toml
cyberkrill-core/: Cargo.toml
cyberkrill-core/src/: bdk_wallet.rs  bitcoin_rpc.rs  coldcard.rs  coldcard_serial.rs  dca_report.rs  decoder.rs  frozenkrill.rs  hardware_wallet.rs  jade.rs  lib.rs  price_feed.rs  satscard.rs  slip132.rs  tapsigner.rs  trezor.rs
cyberkrill/src/: main.rs  mcp_server.rs  satscard.rs  tapsigner.rs
cyberkrill/tests/: mcp_client_test.rs  mcp_integration_test.rs
docs/: README.md
docs/hardware-wallets/: coldcard.md  jade-integration-plan.md  smartcards.md  trezor.md
fedimint-lite/: Cargo.toml  README.md
fedimint-lite/src/: lib.rs
jade-bitcoin/: Cargo.toml  README.md
jade-bitcoin/examples/: get_address.rs  get_xpub.rs  get_xpub_quick.rs  get_xpub_test.rs  sign_psbt.rs  test_simple.rs  test_unlock.rs  test_version.rs
jade-bitcoin/src/: client.rs  error.rs  lib.rs  messages.rs  protocol.rs  serial.rs  types.rs
jade-bitcoin/tests/: integration.rs
src/: bitcoin_rpc.rs  decoder.rs  fedimint.rs  main.rs  satscard.rs  tapsigner.rs
