[package]
name = "cyberkrill"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
clap = { version = "4.5.28", features = ["derive", "env"] }
hex = { version = "0.4.3", features = ["serde"] }
lightning-invoice = { version = "0.33.1", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
