[package]
name = "cyberkrill-core"
version = "0.2.0"
edition = "2024"
description = "Core functionality for Bitcoin and Lightning Network operations"
license = "MIT"
repository = "https://github.com/douglaz/cyberkrill"
keywords = ["bitcoin", "lightning", "lnurl", "fedimint", "tapsigner"]
categories = ["cryptography::cryptocurrencies"]

[features]
default = ["smartcards", "frozenkrill", "coldcard", "trezor", "jade"]
smartcards = ["cktap-direct", "rusb"]
frozenkrill = ["frozenkrill-core"]
coldcard = ["dep:coldcard"]
trezor = ["dep:trezor-client", "rusb"]
jade = ["dep:jade-bitcoin"]

[dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
thiserror = "2.0"
async-trait = "0.1"
hex = { version = "0.4.3", features = ["serde"] }
lightning-invoice = { version = "0.33.2", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
bech32 = "0.11.0"
base64 = "0.22"
url = "2.5.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.47", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
fedimint-lite = { path = "../fedimint-lite" }
tracing = "0.1"
# Tapsigner/Satscard support via USB (optional feature)
cktap-direct = { git = "https://github.com/douglaz/cktap-direct", rev = "6feb5f0", optional = true }
rusb = { version = "0.9", optional = true }
bitcoin = "0.32"
secp256k1 = "0.31"
rand = "0.9"
sha2 = "0.10"
# BDK wallet support
bdk_wallet = "2.1.0"
bdk_electrum = { version = "0.23.1", default-features = false, features = ["use-rustls"] }
bdk_esplora = { version = "0.22.1", default-features = false, features = ["blocking", "blocking-https-rustls"] }
# frozenkrill support
frozenkrill-core = { git = "https://github.com/planktonlabs/frozenkrill", optional = true }
# Coldcard hardware wallet support
coldcard = { git = "https://github.com/douglaz/rust-coldcard", branch = "hidraw", optional = true, default-features = false, features = ["hidraw-backend"] }
# Trezor hardware wallet support (using master branch with bitcoin 0.32 support)
trezor-client = { git = "https://github.com/trezor/trezor-firmware", package = "trezor-client", optional = true }
# Jade hardware wallet support
jade-bitcoin = { path = "../jade-bitcoin", optional = true }

[dev-dependencies]
tempfile = "3.21"
mockito = "1.7"
serial_test = "3.2"
