[package]
name = "cyberkrill"
version = "0.1.0"
edition = "2021"
description = "CLI utility for Bitcoin and Lightning Network operations"
license = "MIT"
repository = "https://github.com/douglaz/cyberkrill"

[features]
default = ["smartcards", "frozenkrill", "coldcard", "trezor", "jade"]
smartcards = ["cyberkrill-core/smartcards"]
frozenkrill = ["cyberkrill-core/frozenkrill"]
coldcard = ["cyberkrill-core/coldcard"]
trezor = ["cyberkrill-core/trezor"]
jade = ["cyberkrill-core/jade"]

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
clap = { version = "4.5.28", features = ["derive", "env"] }
serde_json = "1.0.138"
tokio = { version = "1.0", features = ["full"] }
cyberkrill-core = { path = "../cyberkrill-core", default-features = false }
fedimint-lite = { path = "../fedimint-lite" }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
base64 = "0.22"
hex = "0.4"
