[package]
name = "cyberkrill"
version = "0.2.0"
edition = "2024"
description = "CLI utility for Bitcoin and Lightning Network operations"
license = "MIT"
repository = "https://github.com/douglaz/cyberkrill"

[features]
default = ["smartcards", "frozenkrill", "coldcard", "trezor", "jade"]
smartcards = ["cyberkrill-core/smartcards"]
frozenkrill = ["cyberkrill-core/frozenkrill"]
coldcard = ["cyberkrill-core/coldcard"]
trezor = ["cyberkrill-core/trezor"]
jade = ["cyberkrill-core/jade"]

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
clap = { version = "4.5.48", features = ["derive", "env"] }
serde_json = "1.0.145"
tokio = { version = "1.47", features = ["full"] }
cyberkrill-core = { path = "../cyberkrill-core", default-features = false }
fedimint-lite = { path = "../fedimint-lite" }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
base64 = "0.22"
hex = "0.4"
rmcp = { version = "0.6", features = ["server", "transport-io"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
async-trait = "0.1"
bitcoin = "0.32"

[dev-dependencies]
rmcp = { version = "0.6", features = ["server", "client", "transport-child-process"] }
tokio = { version = "1.47", features = ["full", "test-util", "process"] }
