[package]
name = "fedimint-lite"
version = "0.1.0"
edition = "2021"
authors = ["cyberkrill Contributors"]
description = "Lightweight Fedimint invite code encoder/decoder library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-repo/cyberkrill"
keywords = ["fedimint", "bitcoin", "lightning", "invite-code"]
categories = ["cryptography::cryptocurrencies", "encoding"]

[dependencies]
anyhow = "1.0"
bech32 = "0.9"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "macros"] }
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"